stop footer from covering body

--- a/src/main/resources/static/admin/styles.css
+++ b/src/main/resources/static/admin/styles.css
@@ -14,7 +14,9 @@ html,
 body {
     margin:0;
     padding:0;
-    height:100%;
+    min-height: 675px;
+    margin-bottom: 100px;
+    clear: both;
 }
 #container {
     min-height:100%;
